[package]
name = "liters-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "UniFFI bindings for liters (Swift/Kotlin)"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "liters_ffi"

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"

[features]
# Off by default: S3 pulls in object_store + the reqwest/hyper/rustls/tokio
# async stack (several MB of `.so`) that a mobile app following over HTTP never
# uses. Enable it (`--features s3`) to expose the `Storage::S3` variant.
default = []
s3 = ["liters/s3"]

[dependencies]
liters = { path = "../liters", default-features = false, features = ["http"] }
uniffi = { version = "0.32", features = ["cli"] }
thiserror = { workspace = true }

[dev-dependencies]
rusqlite = { workspace = true }
tempfile = { workspace = true }
