[package]
name = "liters"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Litestream-compatible SQLite replication for embedded use"

[dependencies]
ltx = { workspace = true }
liters-wal = { workspace = true }
liters-storage = { workspace = true }
rusqlite = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
libc = "0.2"

[features]
# Passthrough features: enable the corresponding liters-storage backend and
# the matching `StorageConfig` variant (manager module).
http = ["liters-storage/http"]
s3 = ["liters-storage/s3"]

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
liters-storage = { workspace = true, features = ["s3", "http"] }
